--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -95,7 +95,8 @@ on init
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "83 1804800:95"
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 19000
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/max_freq_hysteresis 79000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1900800
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 100000   
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/ignore_hispeed_on_notif 1
 
     # Configure governor settings for big cluster
@@ -110,7 +111,8 @@ on init
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads "83 1939200:90 2016000:95"
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/min_sample_time 19000
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/max_freq_hysteresis 79000
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 300000
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 2457600
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 100000
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/ignore_hispeed_on_notif 1
 
     # Enable thermal and BCL hotplug
@@ -141,9 +143,27 @@ on init
     chown cameraserver cameraserver /dev/cpuset/camera-daemon/tasks
     chmod 0660 /dev/cpuset/camera-daemon/tasks
 
+   #Smart-Charging
+   chown system system /sys/class/power_supply/battery/input_suspend
+   chmod 0666 /sys/class/power_supply/battery/input_suspend
+
+   # FPS Info
+   chown system graphics /sys/class/graphics/fb0/measured_fps
+   chmod 0666 /sys/class/graphics/fb0/measured_fps
+
+   # FPS Info
+   chown system graphics /sys/devices/virtual/graphics/fb0/measured_fps
+   chmod 0666  /sys/devices/virtual/graphics/fb0/measured_fps
+
+  
+    # ZRAM setup
+    write /sys/block/zram0/comp_algorithm lz4
+    write /sys/block/zram0/disksize 2147483648
+    write /sys/block/zram0/max_comp_streams 8
+    write /proc/sys/vm/page-cluster 0
+	
 on fs
     mount_all /vendor/etc/fstab.qcom --early
-    swapon_all /vendor/etc/fstab.qcom
 
     restorecon_recursive /mnt/vendor/persist
     mkdir /mnt/vendor/persist/alarm 0770 system system
@@ -211,6 +231,11 @@ on property:sys.boot_completed=1
     write /dev/cpuset/restricted/cpus 0-3
     write /dev/cpuset/camera-daemon/cpus 0-3
 
+    # Enable ZRAM on boot_complete
+    swapon_all /vendor/etc/fstab.qcom
+    write /proc/sys/vm/swappiness 100
+
+    # Run post poot script
     start vendor.qcom-post-boot
 
 on charger
